Update player mode options in index.html

--- a/index.html
+++ b/index.html
@@ -571,8 +571,8 @@ html,body{
         <div class="status-strip">
             <div style="display:flex; gap: 12px; flex-shrink: 0;">
                 <select id="modeSelect" class="select">
-                    <option value="single">🤖 SINGLE PLAYER</option>
-                    <option value="multi">👥 MULTI PLAYER</option>
+                    <option value="single">👤 Play with yourself</option>
+                    <option value="multi">👥 Play with someone else</option>
                 </select>
                 <button id="undoBtn" class="ghost">↩️ UNDO</button>
             </div>
